exports_files(
    [
        "README.md",
        "MODULE.bazel",
    ],
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "bzl_srcs",
    srcs = glob(
        include = ["**/*.bzl"],
        exclude = ["bazel-*/**"],
    ) + [
        "//helm:bzl_srcs",
    ],
    visibility = ["//visibility:public"],
)
