load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_rust_mdbook//:defs.bzl", "mdbook", "mdbook_server")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

bzl_library(
    name = "bzl_lib",
    srcs = [
        "//:bzl_srcs",
        "@bazel_tools//tools:bzl_srcs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//helm/settings:settings_bzl",
        "@bazel_lib//lib:base64",
        "@bazel_lib//lib:repo_utils",
        "@bazel_skylib//rules:common_settings",
    ],
)

stardoc(
    name = "rules",
    out = "src/rules.md",
    input = "//helm:defs.bzl",
    table_of_contents_template = "@stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    deps = [":bzl_lib"],
)

stardoc(
    name = "settings",
    out = "src/settings.md",
    func_template = "settings_func.vm",
    input = "//helm/settings:settings.bzl",
    tags = ["manual"],
    deps = [":bzl_lib"],
)

mdbook(
    name = "book",
    srcs = glob(["src/**/*.md"]) + [
        ":rules",
        ":settings",
    ],
    book = "book.toml",
)

alias(
    name = "docs",
    actual = ":book",
)

mdbook_server(
    name = "server",
    book = ":book",
)

sh_binary(
    name = "publish_book",
    srcs = ["publish_book.sh"],
    data = [":book"],
    env = {"BOOK_DIR": "$(rootpath :book)"},
)
