exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "bzl_srcs",
    srcs = glob(["**/*.bzl"]) + [
        "//helm/private:bzl_srcs",
    ],
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "distro",
    srcs = glob([
        "**/*.bzl",
        "**/*.bazel",
    ]) + [
        "//helm/private:distro",
    ],
    visibility = ["//:__subpackages__"],
)
