load("//helm/private:current_toolchain.bzl", "current_helm_toolchain")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

current_helm_toolchain(
    name = "current_toolchain",
    # Marked manual so that `bazel test //...` passes
    # even if no toolchain is registered.
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "bzl_srcs",
    srcs = glob(["**/*.bzl"]) + [
        "//helm/private:bzl_srcs",
    ],
    visibility = ["//:__subpackages__"],
)
