load(":helm_utils.bzl", "stamp_build_setting")

stamp_build_setting(name = "stamp")

filegroup(
    name = "bzl_srcs",
    srcs = glob(["**/*.bzl"]) + [
        "//helm/private/pusher:bzl_srcs",
        "//helm/private/runner:bzl_srcs",
        "//helm/private/stamp:bzl_srcs",
    ],
    visibility = ["//:__subpackages__"],
)
