load("//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_template_test")

helm_chart(
    name = "alt_templates",
    registry_url = "oci://localhost/helm-registry",
    templates = glob([
        "alt_templates/**/*.yaml",
        "alt_templates/**/*.tpl",
        "alt_templates/**/*.txt",
    ]),
)

helm_lint_test(
    name = "alt_templates_lint_test",
    chart = ":alt_templates",
)

helm_template_test(
    name = "alt_templates_template_test",
    chart = ":alt_templates",
)
