load("//helm:defs.bzl", "helm_chart")

helm_chart(
    name = "chart",
    chart = "Chart.yaml",
    values = "values.yaml",
)

genrule(
    name = "genrule",
    srcs = [":chart"],
    outs = ["template.yaml"],
    cmd = "$(HELM_BIN) template my-chart $(execpath :chart) > $@",
    toolchains = ["@rules_helm//helm:current_toolchain"],
)
