load("//helm:defs.bzl", "chart_file", "helm_lint_test", "helm_package")

chart_file(
    name = "chart_file",
    chart_name = "inline_chart",
)

helm_package(
    name = "inline_chart",
    chart = ":chart_file",
    templates = glob(["templates/**"]),
    values = "values.yaml",
)

helm_lint_test(
    name = "inline_chart_test",
    chart = ":inline_chart",
)
