load("//helm:defs.bzl", "chart_file", "helm_lint_test", "helm_package", "helm_template_test")

chart_file(
    name = "chart_file",
    chart_name = "inline_chart",
)

helm_package(
    name = "inline_chart",
    chart = ":chart_file",
    templates = glob(["templates/**"]),
    values = "values.yaml",
    visibility = ["//tests/with_chart_deps:__subpackages__"],
)

helm_lint_test(
    name = "inline_chart_lint_test",
    chart = ":inline_chart",
)

helm_template_test(
    name = "inline_chart_template_test",
    chart = ":inline_chart",
)
