load("//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_template", "helm_template_test")

helm_chart(
    name = "no_templates",
    registry_url = "oci://localhost/helm-registry",
    templates = [],
)

helm_lint_test(
    name = "no_templates_lint_test",
    chart = ":no_templates",
)

helm_template(
    name = "no_templates_template",
    chart = ":no_templates",
)

helm_template_test(
    name = "no_templates_template_test",
    chart = ":no_templates",
)
