load("//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_template_test")

helm_chart(
    name = "simple",
    chart = "Chart.yaml",
    files = glob(["files/**"]),
    registry_url = "oci://localhost/helm-registry",
    values = "values.yaml",
    visibility = ["//tests/with_chart_deps:__subpackages__"],
)

helm_lint_test(
    name = "simple_lint_test",
    chart = ":simple",
)

helm_template_test(
    name = "simple_template_test",
    chart = ":simple",
)
