load("//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_template", "helm_template_test")

helm_chart(
    name = "simple",
    registry_url = "oci://localhost/helm-registry",
)

helm_lint_test(
    name = "simple_lint_test",
    chart = ":simple",
    strict = True,
)

helm_template(
    name = "simple_template",
    out = "simple.yaml",
    chart = ":simple",
)

helm_template_test(
    name = "simple_template_test",
    chart = ":simple",
)
