load("@rules_go//go:def.bzl", "go_test")
load("//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_template_test")

exports_files(["Chart.lock"])

helm_chart(
    name = "with_chart_deps",
    deps = [
        # Make sure that charts that are created by rules_helm can be used as dependencies
        "//tests/with_chart_deps/deps/dep1",
        "//tests/with_chart_deps/deps/dep2",
    ],
)

helm_lint_test(
    name = "with_chart_deps_lint_test",
    chart = ":with_chart_deps",
)

helm_template_test(
    name = "with_chart_deps_template_test",
    chart = ":with_chart_deps",
)

go_test(
    name = "with_chart_deps_test",
    srcs = ["with_chart_deps_test.go"],
    data = [":with_chart_deps"],
    env = {"HELM_CHART": "$(rlocationpath :with_chart_deps)"},
    deps = [
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@io_bazel_rules_go//go/runfiles",
    ],
)
