load("//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_template_test")

helm_chart(
    name = "with_crds",
    registry_url = "oci://localhost/helm-registry",
)

helm_lint_test(
    name = "with_crds_lint_test",
    chart = ":with_crds",
)

helm_template_test(
    name = "with_crds_template_test",
    chart = ":with_crds",
)
